--- a/contents/config.yml
+++ b/contents/config.yml
@@ -1,5 +1,5 @@
 title: Lanxin's Homepage
 page-top-title: Lanxin LU
-top-section-bg-text: Computer Science
-home-subtitle: Sen Li&ensp;|&ensp;李森
-copyright-text: '&copy; Sen Li 2023-2024. All Rights Reserved.'
+# top-section-bg-text: Computer Science
+home-subtitle: Lanxin LU&ensp;|&ensp;卢澜欣
+# copyright-text: '&copy; Sen Li 2023-2024. All Rights Reserved.'
